<resources>
    <string name="app_name">Addressbook</string>


    <string name="menuitem_edit">Edit</string>
    <string name="menuitem_delete">Delete</string>
    <string name="hint_name">Name (required)</string>
    <string name="hint_email">E-Mail</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_street">Street</string>
    <string name="hint_city">City</string>
    <string name="hint_state">State</string>
    <string name="hint_zip">Zip</string>
    <string name="label_name">Name:</string>
    <string name="label_email">E-Mail:</string>
    <string name="label_phone">Phone:</string>
    <string name="label_street">Street:</string>
    <string name="label_city">City:</string>
    <string name="label_state">State:</string>
    <string name="label_zip">Zip:</string>
    <string name="label_photo">Photo:</string>

    <string name="save_button">Save</string>

    <string name="contact_added">Contact added successfully</string>
    <string name="contact_not_added">Contact was not added due to an error</string>
    <string name="contact_updated">Contact updated</string>
    <string name="contact_not_updated">Contact was not updated due to an error</string>
    <string name="contact_deleted">Contact deleted</string>
    <string name="contact_not_deleted">Contact was not deleted due to an error</string>

    <string name="confirm_title">Are You Sure?</string>
    <string name="confirm_message">This will permanently delete the contact</string>

    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>

    <string name="button_save">Save</string>
    <string name="button_do_not_save">Don\'t save</string>

    <string name="button_pick_image">Pick image</string>
    <string name="button_take_photo">Take photo</string>
    <string name="button_remove_photo">Remove photo</string>
    <string name="add_edit_icon_description">Photo of person</string>

    <string name="search">Search</string>

    <string name="error_photo_not_loaded">Photo was not loaded from  due to an error :</string>

</resources>
