<?xml version="1.0" encoding="utf-8"?>

<!-- использован GridLayout с числом столбцов 2
применен особый стиль - который делает рамку как бэк-граунд
Нельзя использовать "androidx.gridlayout.widget.GridLayout", надо использовать просто "GridLayout", т.к. не работает свойство fill_horizontal
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <GridLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:columnCount="2"
        android:useDefaultMargins="true">

        <TextView
            android:id="@+id/label_name_text_view"
            style="@style/label_contact_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/label_name" />

        <TextView
            android:id="@+id/name_text_view"
            style="@style/contact_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            tools:text="name_text_view" />

        <TextView
            android:id="@+id/label_phone_text_view"
            style="@style/label_contact_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/label_phone" />

        <TextView
            android:id="@+id/phone_text_view"
            style="@style/contact_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            tools:text="phone_text_view" />

        <TextView
            android:id="@+id/label_email_text_view"
            style="@style/label_contact_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/label_email" />

        <TextView
            android:id="@+id/email_text_view"
            style="@style/contact_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            tools:text="email_text_view" />

        <TextView
            android:id="@+id/label_street_text_view"
            style="@style/label_contact_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/label_street" />

        <TextView
            android:id="@+id/street_text_view"
            style="@style/contact_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"
            tools:text="street_text_view" />

        <TextView
            android:id="@+id/label_city_text_view"
            style="@style/label_contact_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="4"
            android:text="@string/label_city" />

        <TextView
            android:id="@+id/city_text_view"
            style="@style/contact_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="4"
            tools:text="city_text_view" />

        <TextView
            android:id="@+id/label_state_text_view"
            style="@style/label_contact_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="5"
            android:text="@string/label_state" />

        <TextView
            android:id="@+id/state_text_view"
            style="@style/contact_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="5"
            tools:text="state_text_view" />

        <TextView
            android:id="@+id/label_zip_text_view"
            style="@style/label_contact_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="6"
            android:text="@string/label_zip" />

        <TextView
            android:id="@+id/zip_text_view"
            style="@style/contact_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="6"
            tools:text="zip_text_view" />


    </GridLayout>
</ScrollView>